<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sysWhite">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/sysWhite"
        android:transitionName="@string/source_transition_background" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/type_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="66dp"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:descendantFocusability="blocksDescendants"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="blocksDescendants"
                android:orientation="vertical"
                android:padding="6dp">

                <TextView
                    style="@style/HeaderTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:text="@string/select_hazard" />

                <TextView
                    android:id="@+id/hazard_category_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:paddingTop="10dp"
                    android:text="@string/hazard_category"
                    android:textColor="@color/sysBlack"
                    android:textSize="20dp" />

                <RelativeLayout
                    android:id="@+id/topView"
                    android:layout_width="250dp"
                    android:layout_height="170dp"
                    android:paddingTop="10dp">

                    <RelativeLayout
                        android:layout_width="165dp"
                        android:layout_height="165dp"
                        android:background="@color/sourceGrey"
                        android:transitionName="@string/source_transition">

                        <TextView
                            android:id="@+id/source_type_content_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_margin="@dimen/text_margin"
                            android:fontFamily="sans-serif-medium"
                            android:gravity="center"
                            android:letterSpacing=".05"
                            android:text="obstruction"
                            android:textAllCaps="true"
                            android:textAppearance="?android:attr/textAppearanceListItem"
                            android:textColor="@color/sysWhite"
                            android:textSize="16dp" />

                    </RelativeLayout>
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:paddingTop="20dp"
                    android:text="@string/hazard_type"
                    android:textColor="@color/sysBlack"
                    android:textSize="20dp" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/hazard_type_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingTop="7dp"
                android:paddingBottom="16dp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


    <TextView
        android:id="@+id/type_selected_hazards"
        android:layout_width="wrap_content"
        android:layout_height="57dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="1 selected "
        android:textColor="@color/sourceGrey"
        android:textSize="17dp" />

    <RelativeLayout
        android:id="@+id/type_selected_btn_hazards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/type_add_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="57dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="5dp"
            android:enabled="false"
            android:text="@string/add_hazard"
            android:textSize="18dp"
            android:theme="@style/AccentButton" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/hazard_send_progress"
        android:layout_width="210dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorDefaultGreen"
        android:visibility="gone">

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:theme="@style/CircularProgress" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="64dp"
        android:background="@color/lineGrey" />

    <TextView
        android:id="@+id/type_down_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="68dp"
        android:text="@string/fa_chevron_down"
        android:textColor="@color/colorDefaultGreen"
        android:textSize="60dp" />


    <View
        android:id="@+id/hazard_block_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#40000000"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone" />

</RelativeLayout>
