...
    <string name="check_add_hazard">Address Hazard</string>
    <string name="add_hazard">Hazard(s) Addressed</string>
    <string name="end_tour">End Check</string>
    <string name="select_hazard">Select Hazard</string>
    <string name="frequently_used">Frequently Found Hazards</string>
    <string name="hazard_sources">Hazard Categories</string>
    <string name="hazard_category">Hazard Category</string>
    <string name="hazard_type">Hazards</string>
    <string name="source_transition">Source Transition</string>
    <string name="source_transition_title">Source Transition Title</string>
    <string name="source_transition_background">Source Transition BackGround</string>
    <string name="title_activity_manager_tour">ManagerTourActivity</string>
    <string name="zone">Zones</string>
...
