<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@mipmap/ic_home_white_24dp"
        android:title="@string/title_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/navigation_time"
        android:icon="@mipmap/ic_query_builder_white_24dp"
        android:title="@string/title_schedule"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/navigation_site"
        android:icon="@mipmap/ic_store_white_24dp"
        android:title="@string/title_site"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/navigation_group"
        android:icon="@mipmap/ic_group_work_white_24dp"
        android:title="@string/title_group"
        app:showAsAction="ifRoom" />

</menu>
