...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_grey"
    tools:context="com.seachange.healthandsafty.fragment.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/home_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="@color/app_grey">

        <LinearLayout
...
                android:layout_margin="16dp"
                android:layout_marginTop="48dp"
                android:visibility="gone"
                android:text="@string/there_is_no_schedule_yet_for_today"/>

            <RelativeLayout
                android:id="@+id/manager_home_tour_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/round_corner_view">
...
